# donation_portal

./: .flake8  .gitignore  .pyup.yml  .venv  Dockerfile  Dockerfile.dev  Dockerfile.ubuntu24.04  LICENCE  README.md  apply_patches.sh  deploy.sh  dev.env  docker-compose.yaml  example.env  manage.py  prod.env  pyproject.toml  requirements.txt  start_services.sh  start_services_dev.sh
.devcontainer/: devcontainer.json
.devcontainer/default/: devcontainer.json
.devcontainer/ubuntu24.04/: devcontainer.json
.github/workflows/: deploy.yml
deploy/: deploy.sh
deploy/pillar/: defaults.yml
donation/: admin.py  apps.py  checks.py  download_bank_transactions.py  download_transactions.py  drupal_import.py  eaaxero.py  emails.py  forms.py  models.py  receipt.py  receipts.py  reconcile.py  reporting.py  tasks.py  test_runner.py  views.py
donation/emails/: __init__.py  bank_transfer_instructions.py  eofy_receipt.py  gift_notification.py  partner_charity_report.py  receipt.py
donation/fixtures/: README.md  example-data.json  partner_charities.fixture
donation/migrations/: 0001_initial.py  0001_squashed_0018_auto_20160915_0432.py  0002_import_pledges_from_drupal.py  0002_transitionaldonationsfilefromdrupal.py  0003_auto_20161021_0002.py  0003_banktransaction.py  0004_auto_20160907_2107.py  0004_auto_20161022_0405.py  0005_auto_20160907_2131.py  0005_auto_20161022_0431.py  0006_auto_20160907_2132.py  0006_auto_20161022_0655.py  0007_auto_20160907_2159.py  0007_pledge_payment_method.py  0008_auto_20160907_2310.py  0008_auto_20161022_2111.py  0009_auto_20160908_0015.py  0010_auto_20160911_2015.py  0010_auto_20161022_2119.py  0011_auto_20160911_2032.py  0011_partnercharity_email.py  0012_banktransaction_pledge2.py  0012_initial_partner_charities.py  0013_auto_20161022_2200.py  0013_remove_banktransaction_pledge2.py  0014_auto_20160911_2153.py  0014_auto_20161029_0728.py  0015_auto_20160911_2307.py  0015_auto_20161108_0346.py  0016_auto_20160911_2320.py  0016_auto_20170126_0946.py  0016_tweaks_for_frontend_donation_page.py  0017_partner_charity_tweaks.py  0017_partnercharity_xero_account_name.py  0017_receipt_failed_message.py  0018_auto_20160915_0432.py  0018_auto_20170126_1004.py  0018_auto_20170210_0742.py  0019_auto_20170212_2235.py  0019_partnercharity_website_description.py  (+84 more)
donation/models/: __init__.py  account.py  bank_transfer_instruction.py  donation.py  mailchimp.py  partner_charity.py  partner_charity_report.py  pledge.py  receipt.py  transaction.py
donation/templates/: bank_transfer_instructions.html  bank_transfer_instructions.txt  cc_tmep.html  donation_counter.html  donation_form.html  ea_au_pdf_receipt.html  email_base.html  export.html  gift_message.html  gift_message.txt  impact.html  partner_report_message.txt  pledge-reactive.html  pledge.html  pledge_new.html  pledge_test.html  receipt.html  receipt_message.txt  reconciliation.html  transitional_upload_form.html  xero_callback_status.html
donation/templatetags/: modified_pin_payment_tags.py
donation/tests/: test_donation_form.py  test_emails.py  test_xero.py
donation/views/: accounting.py  donations.py  export.py  form_data.py  (+5 more)
donation_backend/: __init__.py  eaacelery.py  gunicorn.conf.py  settings.py  urls.py  wsgi.py
donation_portal/: eaacelery.py  example.env  gunicorn.conf.py  salt_settings_example.py  settings.py  urls.py  wsgi.py
frontend/: .env  README.md  build.js  build.py  dev.env  dev.py  example.env  package.json  prod.env
frontend_eaae/: README.md  build.js  dev.env  package.json  prod.env
js_donation_form/: .gitignore  package.json
patches/: pinpayments-admin.patch  pinpayments-gettext.patch
pinpayments/: models.py
react/: .gitignore  README.md  package-lock.json  package.json
react_new/: package-lock.json  package.json
static/: partner_charities.json
(+299 files in other folders)
