[project]
name = "donation-portal"
version = "2.0.0"
description = "Effective Altruism Australia's donation portal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arrow==1.3.0",
    "celery==5.4.0",
    "django-cors-headers==4.7.0",
    "django-debug-toolbar>=5.2.0",
    "django-enumfields==2.1.1",
    "django-paypal==2.1",
    "django-pinpayments==1.1.0",
    "django-pymemcache==1.0.0",
    "django-reversion==5.1.0",
    "Django==5.1.12",
    "gunicorn==23.0.0",
    "mailchimp3==3.0.21",
    "mock==5.2.0",
    "playwright>=1.52.0",
    "psycopg2-binary==2.9.10",
    "pymemcache==4.0.0",
    "pytest-playwright>=0.7.0",
    "pytest==8.3.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-postmark==0.6.1",
    "pytz==2025.2",
    "pyxero==0.9.4",
    "raven==6.10.0",
    "redis==6.4.0",
    "rratelimit==0.0.5",
    "sentry-sdk[django]>=2.34.0",
    "setuptools==78.1.1",
    "stripe==12.0.0",
    "watchdog>=6.0.0",
    "weasyprint>=65.1",
    "XlsxWriter==3.2.2",
]

[tool.pytest.ini_options]
testpaths = ["frontend/tests_python"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--tb=short -v"
asyncio_mode = "auto"
markers = [
    "playwright: mark test as playwright test"
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
